<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item  
        android:id="@+id/action_music"  
        android:icon="@drawable/ic_local_hotel_white_36dp"
        android:orderInCategory="98" 
        android:showAsAction="always"/>
    
    <item  
        android:id="@+id/action_music"  
        android:icon="@drawable/ic_directions_bike_white_36dp"  
        android:orderInCategory="99"  
        android:showAsAction="always"/>
    
    <item
        android:id="@+id/menu_playQuartz"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_playQuartz"/>
    
    <item
        android:id="@+id/menu_setting"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/menu_setting"/>

    <item
        android:id="@+id/menu_exit"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/menu_exit"/>

</menu>
